@@ -68,6 +68,10 @@ C-API
 Library
 -------
 
+- Raise a TypeError when the name of a module to be imported for
+  importlib.__import__ is not a string (was raising an
+  AttributeError before).
+
 - Allow the fromlist passed into importlib.__import__ to be any iterable.
 
 - Have importlib raise ImportError if None is found in sys.modules.
